# om4labs

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  requirements.txt
OM4_Analysis_Labs/: annual_bias_1x1deg.py  helpers.py  m6plot.py  m6toolbox.py  om4common.py  om4compute.py  om4plotting.py
OM4_Analysis_Labs/test/: test_common.py  test_helpers.py
OM4labs/: m6plot.py  om4common.py  om4plotting.py
OM4labs/diags/annual_bias_1x1deg/: annual_bias_1x1deg.py
OM4labs/test/: test_common.py  test_helpers.py
ci/: environment-py38esmf800.yml  environment.yml  environment_test.yml  requirements.txt
data/: Create_data_WOA2013_TS.ipynb  Observed_NINO_region_wavelets.ipynb  RoemmichGilson_ARGO_based_climatology.ipynb  checksums_RG_ARGOClim.txt  md5sums_woa13ts.txt  windstress_OM4.py
examples/: example_stress_curl.ipynb
notebooks/: basin_mask_1x1deg.ipynb  dev_smwt.ipynb  dev_swmt_adv.ipynb
om4labs/: __init__.py  helpers.py  m6plot.py  m6toolbox.py  om4common.py  om4parser.py  om4plotting.py
om4labs/catalogs/: OM4_catalog_dora.yml  OM4_catalog_gfdl.yml  OM4p125_catalog_dora.yml  OM4p125_catalog_gfdl.yml  OM4p125_catalog_testing.yml  OM4p5_catalog_gfdl.yml  OMIP2_catalog_gfdl.yml  obs_catalog_dora.yml  obs_catalog_gaea.yml  obs_catalog_generic.yml  obs_catalog_gfdl.yml  obs_catalog_testing.yml
om4labs/diags/: __init__.py
om4labs/diags/acc_drake/: __init__.py  acc_timeseries.py
om4labs/diags/annual_bias_1x1deg/: __init__.py  annual_bias_1x1deg.py
om4labs/diags/avail/: __init__.py  avail.py
om4labs/diags/depth_time_salinity_drift/: depth_time_salinity_drift.py
om4labs/diags/depth_time_temperature_drift/: __init__.py
om4labs/diags/enso/: __init__.py  enso.py
om4labs/diags/generic_annual_bias_1x1deg/: __init__.py  generic_annual_bias_1x1deg.py
om4labs/diags/generic_depth_time_drift/: __init__.py
om4labs/diags/generic_section_transport/: __init__.py  generic_section_transport.py
om4labs/diags/generic_yz_annual_bias_1x1deg/: __init__.py  generic_yz_annual_bias_1x1deg.py
om4labs/diags/heat_transport/: __init__.py  heat_transport.py
om4labs/diags/mld/: __init__.py  mld.py
om4labs/diags/moc/: __init__.py  moc.py
om4labs/diags/seaice/: __init__.py  averagers.py  regrid.py  seaice.py
om4labs/m6plot/: __init__.py  addInteractiveCallbacks.py  addStatusBar.py  xycompare.py  xyplot.py  yzcompare.py  yzplot.py  ztplot.py
om4labs/resources/: landsea_01.msk
om4labs/test/: test_catalogs.py  test_common.py  test_helpers.py  test_parser.py
omlabs/: om4common.py  om4plotting.py
omlabs/catalogs/: OM4_catalog_dora.yml  OM4p125_catalog_dora.yml  obs_catalog_dora.yml
scripts/: om4labs  omlabs
src/omlabs/: __init__.py  m6toolbox.py  om4common.py  om4parser.py
testing/: Makefile  Makefile.OM4p125  Makefile.OM4p25
(+108 files in other folders)
