[options]
packages = om4labs
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    cartopy
    intake
    numpy
    matplotlib
    palettable
    scipy
    setuptools >= 41.2  # For pkg_resources
    xarray
    xesmf
setup_requires =
    setuptools >= 41.2

[options.package_data]
om4labs =
    catalogs/*
