[options]
packages = omlabs
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    cartopy
    cmip_basins
    gsw
    intake
    numpy
    matplotlib
    palettable
    scipy
    setuptools >= 41.2  # For pkg_resources
    static_downsampler
    xarray
    xcompare
    xesmf
    xoverturning
    xwavelet
setup_requires =
    setuptools >= 41.2

[options.package_data]
omlabs =
    catalogs/*
